MVC_AllGodsPage_andOtherSmallChanges

--- a/public/css/maurice.css
+++ b/public/css/maurice.css
@@ -194,3 +194,10 @@
         transform: translate3d(0, 0, 0);
     }
 }
+
+/* All Gods Page Card Changes */
+/* All Gods Page Card Changes */
+#allGodsPageCard {
+    width: 32%;
+}
+
