--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,7 +13,7 @@ a:visited {
 }
 
 header {
-    height: 135px;
+    height: 10em;
     background-color: rgba(0, 0, 0, 0.3);
     width: 100%;
     color: white;
