--- a/public/css/maurice.css
+++ b/public/css/maurice.css
@@ -30,8 +30,8 @@
     z-index: 110;
     padding: 20px;
     width: 600px;
-    background-color: rgba(0, 0, 0, 0.3);
-    border-radius: 3rem;
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
     animation-name: homePageFadeIn;
     animation-duration: 1.5s;
     opacity: 0;
@@ -52,14 +52,14 @@
     }
 }
 
-#homePageKnop {
-    color: #736151;
-    background-color: #b30edd;
+.btn-mau {
+    color: #ffffff;
     text-shadow: none;
+    border-color: white;
 }
 
-#homePageKnop:hover{
-    color: #403333;
+.btn-mau:hover{
+    color: #ffffff;
     background-color: #736151;
     text-shadow: none;
 }
@@ -84,6 +84,22 @@
     top: 7.5%;
     transition: .35s ease-out;
 
+}
+
+#headerIMG {
+    filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(307deg) brightness(104%) contrast(101%);
+    width: 8rem;
+}
+
+#headerIMG:hover {
+    filter: invert(39%) sepia(16%) saturate(606%) hue-rotate(347deg) brightness(93%) contrast(87%);
+    width: 8rem;
+    transition: 0.35s;
+}
+
+#headerLoginIMG {
+    filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(307deg) brightness(104%) contrast(101%);
+    width: 4rem;
 }
 
 /* Picture Fade Straight away */
@@ -199,5 +215,17 @@
 /* All Gods Page Card Changes */
 #allGodsPageCard {
     width: 32%;
+    border-radius: 10px;
+    box-shadow: 2px 4px 5px rgba(115, 97, 81, 0.7);
+    margin: 2em;
+    height: 20%;
+}
+
+#god_card_name {
+    color: #403333;
+}
+
+#god_card_IMG {
+    height: 15rem;
 }
 
