--- a/public/css/maurice.css
+++ b/public/css/maurice.css
@@ -79,22 +79,15 @@
     left: 20%;
 }
 
-#votePic001:hover {
-    position: relative;
-    top: 7.5%;
-    transition: .35s ease-out;
-
-}
-
 #headerIMG {
     filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(307deg) brightness(104%) contrast(101%);
     width: 8rem;
+    transition: 0.2s ease-in-out;
 }
 
 #headerIMG:hover {
     filter: invert(39%) sepia(16%) saturate(606%) hue-rotate(347deg) brightness(93%) contrast(87%);
     width: 8rem;
-    transition: 0.35s;
 }
 
 #headerLoginIMG {
@@ -105,12 +98,20 @@
 /* Picture Fade Straight away */
 /* Picture Fade Straight away */
 #votePic001 {
+    box-shadow: 4px 5px 5px rgba(0, 0, 0, 0.6);
     animation-name: fadeInAnimation001;
     animation-duration: 2s;
     position: relative;
     border-radius: 2%;
     top: 10%;
     cursor: pointer;
+    transition: 0.2s ease-in-out;
+
+}
+
+#votePic001:hover {
+    position: relative;
+    top: 7.5%;
 
 }
 
@@ -131,6 +132,7 @@
 /* First Text Fade After 0.5s */
 /* First Text Fade After 0.5s */
 #allGodsPageVoteText {
+    text-shadow: 4px 5px 5px rgba(0, 0, 0, 0.6);
     animation-name: fadeInAnimation002;
     animation-duration: 1s;
     animation-delay: 0.5s;
@@ -155,6 +157,7 @@
 /* Second Text Fade After 1s */
 /* Second Text Fade After 1s */
 #allGodsPageVoteButton { 
+    box-shadow: 4px 5px 5px rgba(0, 0, 0, 0.6);;
     font-size: 2rem;
     font-weight: 400;
     animation-name: fadeInAnimation003;
@@ -180,6 +183,7 @@
 /* Third Text Fade After 1.5s */
 /* Third Text Fade After 1.5s */
 #allGodsPageShowGods {
+    text-shadow: 4px 5px 5px rgba(0, 0, 0, 0.6);
     top: 80%;
     left: 60%;
     font-size: 3rem;
@@ -190,13 +194,12 @@
     opacity: 0;
     animation-fill-mode: forwards;
     position: relative;
-    transition-timing-function: ease-in;
+    transition: 0.2s ease-in-out;
 }
 
 #allGodsPageShowGods:hover {
     cursor: pointer;
     top: 82%;
-    transition: .35s ease-out;
 }
 
 @keyframes  fadeInAnimation004 {
@@ -219,6 +222,14 @@
     box-shadow: 2px 4px 5px rgba(115, 97, 81, 0.7);
     margin: 2em;
     height: 20%;
+    transform: scale(1);
+    transition: 0.2s ease-in-out;
+    
+}
+
+#allGodsPageCard:hover {
+    cursor: pointer;
+    transform: scale(1.04);
 }
 
 #god_card_name {
