--- a/public/css/maurice.css
+++ b/public/css/maurice.css
@@ -264,6 +264,7 @@
 }
 
 .card_01 {
+    color: #403333;
     border-radius: 10px;
     background-color: white;
     box-shadow: 2px 4px 5px rgba(115, 97, 81, 0.7);
@@ -273,9 +274,27 @@
     padding: 1em;
     border: none;
     z-index: 1;
+    animation-name: card_01_animation;
+    animation-duration: 0.7s;
+    animation-delay: 0s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+    position: relative;
+}
+@keyframes  card_01_animation {
+    0% {
+        opacity: 0;
+        transform: translate3d(0, -50%, 0);
+        
+    }
+    100% {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
 }
 
 .card_02 {
+    color: #403333;
     border-radius: 10px;
     background-color: white;
     box-shadow: 2px 4px 5px rgba(115, 97, 81, 0.7);
@@ -283,27 +302,250 @@
     left: 13%;
     top: 35%;
     padding: 1em;
-    z-index: 2;
+    z-index: 3;
+    animation-name: card_02_animation;
+    animation-duration: 0.7s;
+    animation-delay: 0.3s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+    position: relative;
+}
+@keyframes  card_02_animation {
+    0% {
+        opacity: 0;
+        transform: translate3d(0, -50%, 0);
+        
+    }
+    100% {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
 }
 
 .card_03 {
+    color: #403333;
     border-radius: 10px;
     background-color: white;
     box-shadow: 2px 4px 5px rgba(115, 97, 81, 0.7);
     position: absolute ;
-    left: 45%;
-    top: 10%;
+    left: 30%;
+    top: 20%;
     padding: 1em;
-    z-index: 1;
+    z-index: 4;
+    width: 100%;
+    max-width: 35em;
+    animation-name: card_03_animation;
+    animation-duration: 0.7s;
+    animation-delay: 1s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+    position: relative;
+}
+@keyframes  card_03_animation {
+    0% {
+        opacity: 0;
+        transform: translate3d(0, -50%, 0);
+        
+    }
+    100% {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
 }
 
+
 .card_04 {
+    color: #403333;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 2px 4px 5px rgba(115, 97, 81, 0.7);
+    position: absolute ;
+    left: 13%;
+    top: 70%;
+    padding: 1em;
+    z-index: 5;
+    animation-name: card_04_animation;
+    animation-duration: 0.7s;
+    animation-delay: 1.5s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+    position: relative;
+}
+@keyframes  card_04_animation {
+    0% {
+        opacity: 0;
+        transform: translate3d(0, -50%, 0);
+        
+    }
+    100% {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+
+.card_05 {
+    color: #403333;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 2px 4px 5px rgba(115, 97, 81, 0.7);
+    position: absolute ;
+    left: 40%;
+    top: 70%;
+    padding: 1em;
+    z-index: 6;
+    animation-name: card_05_animation;
+    animation-duration: 0.7s;
+    animation-delay: 1.5s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+    position: relative;
+}
+@keyframes  card_05_animation {
+    0% {
+        opacity: 0;
+        transform: translate3d(0, -50%, 0);
+        
+    }
+    100% {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+
+.card_06 {
+    color: #525252;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 2px 4px 5px rgba(115, 97, 81, 0.7);
+    position: absolute ;
+    max-width: 33em;
+    left: 70%;
+    top: 70%;
+    padding: 1em;
+    z-index: 6;
+    font-style: italic;
+    animation-name: card_06_animation;
+    animation-duration: 0.7s;
+    animation-delay: 1.5s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+    position: relative;
+}
+@keyframes  card_06_animation {
+    0% {
+        opacity: 0;
+        transform: translate3d(0, -50%, 0);
+        
+    }
+    100% {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+
+.card_07 {
+    color: #403333;
     border-radius: 10px;
     background-color: white;
     box-shadow: 2px 4px 5px rgba(115, 97, 81, 0.7);
     position: absolute ;
     left: 70%;
-    top: 30%;
+    top: 20%;
     padding: 1em;
+    z-index: 6;
+    animation-name: card_07_animation;
+    animation-duration: 0.7s;
+    animation-delay: 2s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+    position: relative;
+}
+@keyframes  card_07_animation {
+    0% {
+        opacity: 0;
+        transform: translate3d(0, -50%, 0);
+        
+    }
+    100% {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
 }
 
+
+.card_08 {
+    color: #403333;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 2px 4px 5px rgba(115, 97, 81, 0.7);
+    position: absolute ;
+    left: 70%;
+    top: 40%;
+    padding: 1em;
+    z-index: 6;
+    animation-name: card_08_animation;
+    animation-duration: 0.7s;
+    animation-delay: 2.5s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+    position: relative;
+}
+@keyframes  card_08_animation {
+    0% {
+        opacity: 0;
+        transform: translate3d(0, -50%, 0);
+        
+    }
+    100% {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+}
+
+.card_09 {
+    color: #403333;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 2px 4px 5px rgba(115, 97, 81, 0.7);
+    position: absolute ;
+    left: 85%;
+    top: 40%;
+    max-width: 10rem;
+    padding: 1em;
+    z-index: 6;
+    animation-name: card_09_animation;
+    animation-duration: 0.7s;
+    animation-delay: 3s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+    position: relative;
+}
+@keyframes  card_09_animation {
+    0% {
+        opacity: 0;
+        transform: translate3d(0, -50%, 0);
+        
+    }
+    100% {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+
+#ZeusHeart {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+#GoBackKnop {
+    position: absolute ;
+    left: 5%;
+    top: 90%; 
+}
